OLD/tests/expects/basic_failure/test_basic_failure.expect
error: Undefined identifier: undeclared_variable
  --> basic_failure/test_basic_failure.truk:7:5
  |
6 |     printf("Hello, World!\n");
7 |     undeclared_variable = 42;
  |     ^
8 |     return 0;
  |

Compilation failed with 1 error(s)
