OLD/tests/expects/basic_failure/test_basic_failure.truk
cimport <stdio.h>;

extern fn printf(fmt: *i8, ...args) : i32;

fn main() : i32 {
    printf("Hello, World!\n");
    undeclared_variable = 42;
    return 0;
}
